@@ -150,6 +150,7 @@ Bug fixes:
 - Fix AD domain authentication.
 - Fix wol gbe driver.
 - Fix sipcalc does not support ipv6 zone index identifiers.
+- Fix hast to mount points. (br 85)
 
 Permanent restrictions:
 - It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
